k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
        labels:
          component: server
    spec:  # spec of each container that is to be created
      containers:
        - name: server
          image: ericwatts/multi-docker-deploy-server
          ports:
            - containerPort: 5000
